clusters/hybrid01/config/istiod/istio-privileged-pod-security-fix.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-privileged-label-to-namespaces
  annotations:
    policies.kyverno.io/title: Add Privileged Label to Existing Namespaces
    policies.kyverno.io/category: Pod Security Admission
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/description: >-
      This is needed because the istio init pod needs net admin privileges
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: label-privileged-namespaces
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          <(name): "!kube-system"
          labels:
            pod-security.kubernetes.io/enforce: privileged
